- disable disaggregation of quadratic constraints by changing the default for constraints/quadratic/maxdisaggrsize to 1
  (disaggregation can still be very helpful on some instances, but also seems hurtful on others)
- test additional scaling factors in CMIR cut generatio heuristic
- cleaned up implementation of the cut selection procedure and added new cut quality measure

features:
- allow output of lower bounds for visualization
- add number of conflict constraints found by diving heuristics to statistics
- added symmetry detection for linking constraints
- SCIP executable handles the SIGTERM signal. If the process receives a SIGTERM, SCIP terminates the solution process with a new SCIP_STATUS code
   "SCIP_STATUS_TERMINATE" and displays all relevant statistics before exiting.

new parameters:
- new parameter "visual/displb" that enables output of lower bounds for visualization

deleted and modified parameters:
- rename parameter: "constraints/orbisack/orbisack/coverseparation" to "constraints/orbisack/coverseparation"

interface changes:
- new SCIP_STATUS code "SCIP_STATUS_TERMINATE" and methods SCIPtryTerminate() and SCIPterminated() in scip/interrupt.h for handling
   of SIGTERM signals.
- new function SCIPselectCuts() to run SCIP's cut selection procedure on a given array of cuts

new parameters:
- new parameter: "presolving/symmetry/displaynorbitvars" (whether we display the number of affected variables in the statistics)
- new parameter: "separating/efficacyfac" to change the weight of the efficacy in cut score calculation
- new parameter: "separating/dircutoffdistfac" to change the weight of the directed cutoff distance in cut score calculation

fixed bugs:
- fixed wrong cast in LP iteration limit computation in proximity search heuristic
- fixed check for time limit in heur_nlpdiving
- fixed LP status to unsolved when marking LP to be resolved if objective limit has changed
- improved numerics and fixed stop criterion in zirounding heuristic