@@ -428,10 +428,16 @@ SCIP_RETCODE calcActivityBounds(
  * public functions
  */
 
-/** initialize matrix */
+/** initialize matrix
+ *
+ *  @note Completeness is checked by testing whether all check constraints are from a list of linear constraint handlers
+ *        that can be represented.  This ignores constraint handlers that do not need constraints, i.e., where
+ *        SCIPconshdlrNeedsCons() is false.
+ */
 SCIP_RETCODE SCIPmatrixCreate(
    SCIP*                 scip,               /**< current scip instance */
    SCIP_MATRIX**         matrixptr,          /**< pointer to constraint matrix object to be initialized */
+   SCIP_Bool             onlyifcomplete,     /**< should matrix creation be skipped if matrix will not be complete? */
    SCIP_Bool*            initialized,        /**< was the initialization successful? */
    SCIP_Bool*            complete            /**< are all constraint represented within the matrix? */
    )
@@ -501,16 +507,15 @@ SCIP_RETCODE SCIPmatrixCreate(
       }
    }
 
-   /* print warning if we have unsupported constraint types.
-    * we do not abort the matrix creation process here, because
-    * it makes sometimes sense to work on an incomplete
-    * matrix as long as the number of interesting variable
-    * uplocks or downlocks of the matrix and scip
-    * are the same.
+   /* print warning if we have unsupported constraint types; we only abort the matrix creation process if requested,
+    * because it makes sometimes sense to work on an incomplete matrix as long as the number of interesting variable
+    * uplocks or downlocks of the matrix and scip are the same
     */
    if( nconss < nconssall )
    {
       SCIPdebugMsg(scip, "Warning: milp matrix not complete!\n");
+      if( onlyifcomplete )
+         return SCIP_OKAY;
    }
    else
    {
