@@ -357,7 +357,7 @@ SCIP_DECL_PRESOLEXEC(presolExecStuffing)
    *result = SCIP_DIDNOTFIND;
 
    matrix = NULL;
-   SCIP_CALL( SCIPmatrixCreate(scip, &matrix, &initialized, &complete) );
+   SCIP_CALL( SCIPmatrixCreate(scip, &matrix, FALSE, &initialized, &complete) );
 
    if( initialized )
    {
