@@ -7,6 +7,7 @@ performance improvements:
   (disaggregation can still be very helpful on some instances, but also seems hurtful on others)
 - test additional scaling factors in CMIR cut generatio heuristic
 - cleaned up implementation of the cut selection procedure and added new cut quality measure
+- matrix presolver that do not work on incomplete matrices now skip matrix creation if unsupported constraint types are detected
 
 features:
 - allow output of lower bounds for visualization
@@ -25,6 +26,7 @@ interface changes:
 - new SCIP_STATUS code "SCIP_STATUS_TERMINATE" and methods SCIPtryTerminate() and SCIPterminated() in scip/interrupt.h for handling
    of SIGTERM signals.
 - new function SCIPselectCuts() to run SCIP's cut selection procedure on a given array of cuts
+- new argument "onlyifcomplete" in SCIPmatrixCreate() to skip matrix creation right after detecting unsupported constraint types
 
 new parameters:
 - new parameter: "presolving/symmetry/displaynorbitvars" (whether we display the number of affected variables in the statistics)
